# what-should-we-watch-django

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
config/: asgi.py  settings.py  urls.py  wsgi.py
docs/postgres-dev/: Dockerfile  create-dev-container.sh
lib/: tmdb.py
main/: models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_auto_20200402_2128.py  0003_auto_20200403_0710.py
main/templates/main/: base.html  index.html  party.html  results.html
whatshouldwewatch/: asgi.py  settings.py  urls.py  wsgi.py
