[tool.poetry]
name = "what-should-we-watch"
version = "0.1.0"
description = ""
authors = ["Avery Larsen <hello@averylarsen.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"
gunicorn = "^20.0.4"
django-environ = "^0.4.5"
psycopg2 = "^2.8.6"
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
isort = "^5.5.2"
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
